--- a/Tablas/tablas.html
+++ b/Tablas/tablas.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body>  
     <h1>Tablas</h1> 
 
         <table border = " 3 " cellpadding = " 5 " cellspacing = " 9 " >
@@ -39,7 +39,7 @@
             <td> Julio </td> 
             <td> Aguilar </td> 
             <td align="center"> 30 </td> 
-            <td align="center"; rowspan="2"> 2500 </td> 
+            <td align="center"; rowspan="2"; style="color: rgb(127, 192, 245);"> 2500 </td> 
         </tr>
         <tr>
             <th> 4 </th>
