--- a/TareaStyles/catalogo.html
+++ b/TareaStyles/catalogo.html
@@ -15,7 +15,7 @@
         <a class="active" href="catalogo.html">Catálogo</a>
         <a href="contactos.html">Contactos</a>
     </nav>
-    <h1 class="title1">CATÁLOGO</h1>
+    <h1 class="title">CATÁLOGO</h1>
     <p>
         <img align="center" src="imagenes/usm-forza250cc0.jpg"; height="600"; long="1200">
     </p>
