--- a/TareaStyles/noticias.html
+++ b/TareaStyles/noticias.html
@@ -15,7 +15,7 @@
         <a href="catalogo.html">Catálogo</a>
         <a href="contactos.html">Contactos</a>
     </nav>
-    <h1 class="title1" >NOVEDADES</h1>
+    <h1 class="title" >NOVEDADES</h1>
     <p>
         <img align="center" src="imagenes/usm-leopard200cc0.jpg"; height="600"; long="1200">
     </p>   
