--- a/TareaStyles/productos.html
+++ b/TareaStyles/productos.html
@@ -15,7 +15,7 @@
         <a href="catalogo.html">Catálogo</a>
         <a href="contactos.html">Contactos</a>
     </nav>
-    <h1 class="title1" > PRODUCTOS</h1>
+    <h1 class="title" > PRODUCTOS</h1>
     <ul>
         <li>
             <h4>Harley-Davidson reanuda la producción de su motocicleta eléctrica, LiveWire</h4> 
