--- a/TareaStyles/index.html
+++ b/TareaStyles/index.html
@@ -9,15 +9,23 @@
 </head>
 <body class="body2">
     <nav class="topnav">
-        <a class="active" href="#">Inicio</a>
-        <a href="noticias.html">Noticias</a>
-        <a href="productos.html">Productos</a>
-        <a href="catalogo.html">Catálogo</a>
-        <a href="contactos.html">Contactos</a>
+        <div>
+            <a class="active" href="#">Inicio</a>
+            <a href="noticias.html">Noticias</a>
+            <a href="productos.html">Productos</a>
+            <a href="catalogo.html">Catálogo</a>
+            <a href="contactos.html">Contactos</a>
+        </div>
+        <div class="align2">
+            <a href="auth/login.html" >login</a>
+            <a href="auth/register.html" >Register</a>
+        </div>
     </nav>
     <div>
-        <h1 class="title1">TRUENO MOTORSTAR S.R.L.</h1>
+        <h1 class="title">TRUENO MOTORSTAR S.R.L.</h1>
+    <div class="bg">
         <h2 color="blue" >¿ Quiénes Somos ?</h2>
+    </div>
         <p>
             Con más de 14 años de experiencia en el rubro, Trueno Motorstar SRL es una empresa dedicada a la comercialización de motocicletas, venta de repuestos originales de la marca, venta de accesorios para todos los modelos y servicio de mantenimiento preventivo y correcto a unidades de la marca. <br> Trueno Motorstar SRL. está conformado por un equipo interdisciplinario de profesionales en ventas, repuestos, mecánica, asesoría en servicios y apoyo al cliente que responde a la satisfacción de nuestros clientes. <br> Nuestra sede central está ubicada en la ciudad de Cochabamba y dispone de 6 sucursales en el territorio nacional Ubicadas en el departamento de Santa Cruz, La Paz, Tarija, Sucre y Beni (Trinidad y Riberalta). <br> En el resto del país hay una presencia notable con una amplia cartera de mayoristas y agentes de la marca.
         </p>
